--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -860,7 +860,7 @@ and before any \texttt{/* PLUG: ... */} declarations.
 We guarantee the behavior only if the provided shading language code
 is a correct, self-contained code.
 X3D browser doesn't validate this code in any way, so any error (like undeclared
-variable, unterminated block (,,\{'' without matching ,,\}''),
+variable, unterminated block (,,\texttt{\{}'' without matching ,,\texttt{\}}''),
 or an unterminated comment) may be only detected after the complete shader
 is determined and compiled by the GPU.
 
@@ -1047,17 +1047,19 @@ void PLUG_\codeem{vertex_object_space_change}(
   inout vec3 normal_object)
 \end{Verbatim}
 
-You can modify the vertex and normal vectors in object space here.
-If you don't want to modify them, consider using \texttt{vertex\_object\_space}
+You can modify the vertex position and normal vector in object space here.
+If you don't need to modify the vertex position,
+consider using the \texttt{vertex\_object\_space}
 instead, that may result in more optimized shader.
 
 \begin{Verbatim}[commandchars=\\\{\},frame=single]
 void PLUG_\codeem{vertex_object_space}(
   const in vec4 vertex_object,
-  const in vec3 normal_object)
+  inout in vec3 normal_object)
 \end{Verbatim}
 
-Process the vertex and normal in object space.
+Process the vertex and normal in object space. You cannot change the vertex
+position here, but you can still change the normal vector.
 
 \begin{Verbatim}[commandchars=\\\{\},frame=single]
 void PLUG_\codeem{vertex_eye_space}(
@@ -1075,7 +1077,7 @@ void PLUG_\codeem{fragment_eye_space}(
   inout vec3 normal_eye)
 \end{Verbatim}
 
-Process the vertex and normal in eye space, at fragment shader.
+Process the vertex and normal in eye space, at the fragment shader.
 You can modify the normal vector here, this is useful for bump mapping.
 
 \begin{Verbatim}[commandchars=\\\{\},frame=single]
@@ -1099,7 +1101,7 @@ void PLUG_\codeem{add_light_contribution_front}(
   const in gl_MaterialParameters material)
 \end{Verbatim}
 
-Add pixel color for a lit material. This is typically used for each light source.
+Add pixel color for a lit material. This is typically used to add the light sources.
 There is also the \texttt{add\_light\_contribution\_back},
 for light contribution on the back side of the faces.
 
@@ -1124,7 +1126,8 @@ void PLUG_\codeem{texture_apply}(
   const in vec3 normal_eye)
 \end{Verbatim}
 
-Apply a texture color.
+At this point, the textures are applied. You can change the fragment
+color now, for various effects.
 
 \begin{Verbatim}[commandchars=\\\{\},frame=single]
 void PLUG_\codeem{fog_apply}(
@@ -1132,7 +1135,8 @@ void PLUG_\codeem{fog_apply}(
   const vec3 normal_eye_fragment)
 \end{Verbatim}
 
-Apply the fog effect. This plug is called after
+At this point, the X3D fog is applied. Again you can change here the
+fragment color, as you desire. This plug is called after
 the \texttt{texture\_apply}, because you usually want to apply the fog
 to the final (textured) fragment color.
 
@@ -1147,7 +1151,7 @@ This is useful for operations like alpha-testing the fragment.
 
 \section{Complete example models}
 
-Examples are available inside our engine demo models on
+Examples models using our effects are available inside our engine demo models on
 \myhref{http://vrmlengine.sourceforge.net/demo\_models.php}{http://vrmlengine.sourceforge.net/demo_models.php}.
 The relevant demos are mostly inside the \texttt{compositing\_shaders}
 subdirectory, also the \texttt{water} subdirectory contains
@@ -1170,7 +1174,7 @@ require particular effects (shaders by \texttt{ComposedShader}, effects
 described in this paper, shadow maps and such).
 Forcing shader rendering for everything allows to see
 how our shaders implement the whole X3D lighting and texturing model.
-It also makes the whole lighting calculation per-pixel, resulting
+It also forces all the lighting calculation to be done per-pixel, resulting
 in perfect specular highlights and spot light shapes.
 
 %% Development notes: only the SVN demo\_models contain
