--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -1124,7 +1124,7 @@ void PLUG_\codeem{texture_color}(
 Calculate or modify the texture color.
 This plug is available for texture effects. The second parameter
 is special: for \texttt{ShaderTexture}, it doesn't exist at all.
-For other texture nodes, the sampler type depends on the correspoding
+For other texture nodes, the sampler type depends on the corresponding
 X3D texture node: \texttt{sampler2D} for 2D textures,
 \texttt{sampler3D} for 3D textures, \texttt{samplerCube} for cube
 maps, and \texttt{sampler2DShadow} for \texttt{GeneratedShadowMap}.
