Added "Acknowledgements" section.
Also tried adding a proper citation for NoiseTexture, but there's simply no place for it... Left commented out.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8588 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -72,3 +72,9 @@
 %%   author = "{Microsoft}",
 %%   howpublished = "\url{http://msdn.microsoft.com/en-us/library/bb509561\%28v=vs.85\%29.aspx}"
 %% }
+
+%% misc{instant:noisetex,
+%%   title = "{NoiseTexture}",
+%%   author = "{Instant Reality}",
+%%   howpublished = "\url{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}"
+%% }
