--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -915,7 +915,7 @@ pass the current time from a \texttt{TimeSensor} and make dynamic effects.
 
 We can also wrap 2D and 3D noise inside a \texttt{ShaderTexture}.
 A texture node like \texttt{NoiseTexture} from InstantReality
-%% \myhref{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}{http://doc.instantreality.org/documentation/nodetype/NoiseTexture/}
+% (\cite{instant:noisetex})
 may be implemented on GPU by a simple prototype using the \texttt{ShaderTexture}.
 
 \begin{figure}[H]
@@ -1190,6 +1190,16 @@ in perfect specular highlights and spot light shapes.
 %% compositing\_shaders subdirectory.
 %% You also have to use view3dscene from SVN or nightly builds,
 %% see \myhref{http://michalis.ii.uni.wroc.pl/vrmlengine-snapshots/}{http://michalis.ii.uni.wroc.pl/vrmlengine-snapshots/}.
+
+\section*{Acknowledgements}
+
+A lot of people helped and encouraged the development of our VRML/X3D engine,
+with it's rendering features and extensions. A big ,,thank you''
+goes to all of you.
+
+The Japanese shrine model, used for an eye-candy screenshots
+at the beginning of this paper, comes from
+\myhref{http://opengameart.org/content/shrine-shinto-japan}{http://opengameart.org/content/shrine-shinto-japan}.
 
 \bibliographystyle{acmsiggraph}
 % \nocite{*}
