Title with "Shaders" capitalized.
Added "Author identification removed" (commented out in svn).

Better keywords.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8590 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -68,11 +68,12 @@
 % from http://www.miwie.org/tex-refs/html/latex-packages.html#hyperref
 \newcommand*{\myhref}[2]{\texttt{\href{#1}{\nolinkurl{#2}}}}
 
-\title{Compositing shaders in X3D}
+\title{Compositing Shaders in X3D}
 
 \author{Michalis Kamburelis\thanks{e-mail: michalis.kambi@gmail.com}\\Institute of Computer Science\\University of Wroc{\l}aw, Poland}
+%\author{(Author identification removed.)\thanks{e-mail: xxx@xxx.xxx}\\Xxx\\Xxx}
 
-\keywords{X3D graphics, shaders, GLSL, shadows, shadow maps, bump mapping}
+\keywords{X3D, shaders, GLSL, effects, shadow maps, bump mapping}
 
 \begin{document}
 
