Improve figures for paper --- need to be smaller to fit for TPCG11 style.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8821 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -81,10 +81,11 @@
 
 \begin{document}
 
-\teaser{
-  \includegraphics[width=2.19in]{rhan_shrine_5_everything}
-%%  \caption{Bump mapping and 2 shadow maps on the same shape.}
-}
+% TODO - restore?
+%% \teaser{
+%%   \includegraphics[width=2.19in]{rhan_shrine_5_everything}
+%% %%  \caption{Bump mapping and 2 shadow maps on the same shape.}
+%% }
 
 \maketitle
 
@@ -163,12 +164,12 @@ we want to modify all the light sources.
 
 \begin{figure*}[t]
   \centering
-  \includegraphics[width=2.3in]{rhan_shrine_0}
-  \includegraphics[width=2.3in]{rhan_shrine_1_per_pixel_lighting}
-  \includegraphics[width=2.3in]{rhan_shrine_2_bump_mapping}
-  \includegraphics[width=2.3in]{rhan_shrine_3_shadow_1st}
-  \includegraphics[width=2.3in]{rhan_shrine_4_shadow_2nd}
-  \includegraphics[width=2.3in]{rhan_shrine_5_everything}
+  \includegraphics[width=2.0in]{rhan_shrine_0}
+  \includegraphics[width=2.0in]{rhan_shrine_1_per_pixel_lighting}
+  \includegraphics[width=2.0in]{rhan_shrine_2_bump_mapping}
+  \includegraphics[width=2.0in]{rhan_shrine_3_shadow_1st}
+  \includegraphics[width=2.0in]{rhan_shrine_4_shadow_2nd}
+  \includegraphics[width=2.0in]{rhan_shrine_5_everything}
   \caption{Japanese shrine model with more and more effects applied: Gouraud shading,
 Phong shading (per-pixel lighting), bump mapping, shadows from 1st light,
 shadows from 2nd light, shadows from both lights.}
@@ -573,9 +574,9 @@ it can be instantly used with various lighting and texturing conditions
 
 \begin{figure*}[t]
   \centering
-  \includegraphics[width=2.3in]{volumetric_animated_fog_no_fog}
-  \includegraphics[width=2.3in]{volumetric_animated_fog_no_light}
-  \includegraphics[width=2.3in]{volumetric_animated_fog_all}
+  \includegraphics[width=2.0in]{volumetric_animated_fog_no_fog}
+  \includegraphics[width=2.0in]{volumetric_animated_fog_no_light}
+  \includegraphics[width=2.0in]{volumetric_animated_fog_all}
   \caption{Volumetric fog scene: 1) No fog; 2) No lighting; 3) Lights and fog.
 Note that the fog is assumed to have its own ambient lighting,
 so it colors the image even in the 2) case.}
@@ -856,9 +857,9 @@ and before any \texttt{/* PLUG: ... */} declarations.
 \begin{figure*}[t]
   \centering
 %  \includegraphics[width=2.3in]{water_shaders_0}
-  \includegraphics[width=2.3in]{water_shaders_1}
-  \includegraphics[width=2.3in]{water_shaders_2}
-  \includegraphics[width=2.3in]{water_shaders_3}
+  \includegraphics[width=2.0in]{water_shaders_1}
+  \includegraphics[width=2.0in]{water_shaders_2}
+  \includegraphics[width=2.0in]{water_shaders_3}
   \caption{Water using our effects: 1) Per-pixel lighting and bump mapping.
 2) Per-pixel lighting and reflections and refractions (by a single environment cube map texture).
 3) All effects.}
